--- a/install_docker.yaml
+++ b/install_docker.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Install Docker on all servers
-  hosts: servers
+  hosts: webservers
   become: yes
   tasks:
     - name: Update the apt package index
