--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,25 +1,8 @@
 ---
-- name: Deploy Redmine on All Servers
+- name: Deploy Redmine
   hosts: all
   become: true
   roles:
-    - role: geerlingguy.pip
-      vars:
-        pip_install_packages:
-          - name: docker
-
-  tasks:
-    - name: Create .env file for Redmine
-      ansible.builtin.template:
-        src: .env.j2
-        dest: /tmp/.env
-
-    - name: Run Redmine container
-      community.docker.docker_container:
-        name: redmine
-        image: redmine
-        state: started
-        restart_policy: always
-        published_ports:
-          - "3000:3000"
-        env_file: /tmp/.env
+    - install_docker
+    - geerlingguy.pip
+    - deploy_redmine
