--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -9,3 +9,7 @@ REDMINE_DB_POSTGRES: 10.0.0.240
 REDMINE_DB_USERNAME: admin
 REDMINE_DB_PASSWORD: "{{ REDMINE_DB_PASSWORD_VAULT }}"
 REDMINE_DB_DATABASE: PostgreSQL-1037
+
+# Переменные для роли datadog.dd.agent
+datadog_api_key: "{{ datadog_api_key_vault }}"
+datadog_site: "datadoghq.com"
