--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -13,3 +13,6 @@ REDMINE_DB_DATABASE: PostgreSQL-1037
 # Переменные для роли datadog.dd.agent
 datadog_api_key: "{{ datadog_api_key_vault }}"
 datadog_site: "datadoghq.com"
+
+# Прочие
+ansible_user: ubuntu
