--- a/roles/deploy_redmine/tasks/main.yml
+++ b/roles/deploy_redmine/tasks/main.yml
@@ -3,6 +3,7 @@
   ansible.builtin.template:
     src: .env.j2
     dest: /tmp/.env
+    mode: '0600'
 
 - name: Run Redmine container
   community.docker.docker_container:
