--- a/roles/install_docker/meta/main.yml
+++ b/roles/install_docker/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
+  author: imokretsov
   description: your role description
-  company: your company (optional)
+  company: imokretsov
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,7 +14,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: MIT
 
   min_ansible_version: 2.1
 
@@ -27,7 +27,12 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
+  platforms:
+    - name: Ubuntu
+    versions:
+      - xenial
+      - bionic
+      - focal
   # - name: Fedora
   #   versions:
   #   - all
