--- a/roles/install_docker/tasks/main.yml
+++ b/roles/install_docker/tasks/main.yml
@@ -21,6 +21,7 @@
 - name: Get the distribution codename (lsb_release -cs)
   command: lsb_release -cs
   register: lsb_release
+  changed_when: false
 
 - name: Set up the stable repository for Docker installation
   ansible.builtin.apt_repository:
